2006-07-27  Roger Leigh  <rleigh@debian.org>

	* sbuild/sbuild-auth-conv.h: Update API documentation.

2006-07-27  Roger Leigh  <rleigh@debian.org>

	* sbuild/sbuild-auth.cc
	(authenticate): Split string definition and appending of
	additional parts into multiple statements, for GCC 3.3
	compatibility.

	* sbuild/sbuild-tr1types.h: If using boost::shared_ptr, import
	static_pointer_cast, const_pointer_cast and dynamic_pointer_cast
	into the std::tr1 namespace for GCC 3.3 and 3.4 compatibility.

2006-07-27  Roger Leigh  <rleigh@debian.org>

	* po/de.po: Update German translation.

2006-07-27  Roger Leigh  <rleigh@debian.org>

	* schroot/schroot-releaselock.cc, schroot/schroot.cc,
	schroot/schroot-listmounts.cc, sbuild/sbuild-parse-error.h,
	sbuild/sbuild-auth.cc, sbuild/sbuild-auth.h, dchroot/dchroot.cc,
	dchroot-dsa/dchroot-dsa.cc: Fix typo (occured).  Thanks to Jens
	Seidel <jensseidel@users.sf.net> for reporting this.

2006-07-27  Roger Leigh  <rleigh@debian.org>

	* po/LINGUAS: Add de.

	* po/de.po: New file.  German translation from Jens Seidel.

2006-07-27  Roger Leigh  <rleigh@debian.org>

	* schroot/schroot-listmounts-main.cc
	(action_listmounts): mounts is const, to fix a GCC 4.0 compiler
	bug.

2006-07-20  Roger Leigh  <rleigh@debian.org>

	* debian/changelog: Add missing Debian-specific revisions.

2006-07-20  Roger Leigh  <rleigh@debian.org>

	* debian/changelog: debian/copyright updates.

2006-07-20  Roger Leigh  <rleigh@debian.org>

	* po/LINGUAS: Add vi.

2006-07-20  Roger Leigh  <rleigh@debian.org>

	* debian/changelog: Bump version to 1.0.0.

	* NEWS: Bump version to 1.0.0.

	* configure.ac: Bump version to 1.0.0.

2006-07-20  Luk Claes  <luk@debian.org>

	* po/vi.po: Update Vietnamese translation.

2006-07-20  Roger Leigh  <rleigh@debian.org>

	* Version 0.99.4

	* debian/changelog: Update for 0.99.4

2006-07-20  Roger Leigh  <rleigh@debian.org>

	* po/en_GB.po: Update translation.

2006-07-20  Roger Leigh  <rleigh@debian.org>
